--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,16 +1,22 @@
 <ion-toolbar>
-  <ion-title>css </ion-title>
+  <ion-title>operation</ion-title>
 </ion-toolbar>
 <ion-content>
 
-<div class="container">
-  <div class="inner">
-
+  <div class="ion-padding"   >
+    <ion-button (click)="AddDocument()" expand="block" fill="solid" shape="round">
+      AddDocument
+    </ion-button>
   </div>
-</div>
-
-<div class="text" >
-  <h1>hello</h1>
-</div>
+  <div  class="ion-padding">
+    <ion-button (click)="AddField()" expand="block" fill="solid" shape="round">
+      AddField
+    </ion-button>
+  </div>
+  <div  class="ion-padding" >
+    <ion-button (click)="AddCollection()" expand="block" fill="solid" shape="round">
+      AddCollection
+    </ion-button>
+  </div>
 
 </ion-content>
