--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,58 +1,59 @@
 <ion-app>
 
-  <ion-menu contentId="menu-content" menuId="menu-content"  class="my-custom-menu"  >
-
-    <ion-header >
-
-    </ion-header>
+  <ion-menu
+    contentId="menu-content"
+    menuId="menu-content"
+    class="my-custom-menu"
+  >
+    <ion-header> </ion-header>
 
     <ion-content>
-
-
-      <div  class="menu-header-bg"></div>
+      <div class="menu-header-bg"></div>
       <div class="header-content">
-        <img src="assets/shayari.png" alt="">
-          <label>
-            <h2>Train Status</h2>
-          </label>
-         </div>
+        <img src="assets/shayari.png" alt="" />
+        <label>
+          <h2>TRV Shayari</h2>
+        </label>
+      </div>
 
+      <ion-list lines="none" class="menu-item" width="200">
+        <ion-item>
+          <img src="../assets/icon/paint-brush.png" alt="" />
+          <ion-label>Shayari Creater</ion-label>
+        </ion-item>
 
-  <ion-list lines="none" class="menu-item" width="200" >
+        <ion-item class="active" ion-item>
+          <img src="../assets/icon/thumb-up.png" alt="" />
+          <ion-label>Favorites</ion-label>
+        </ion-item>
 
+        <ion-item ion-item>
+          <img src="../assets/icon/privacy.png" alt="" />
+          <ion-label>Privacy policy</ion-label>
+        </ion-item>
 
-     <ion-item >
-      <img src="assets/icon/share.png" alt="">
-        <ion-label>Share App</ion-label>
-      </ion-item>
+        <ion-item ion-item>
+          <img src="../assets/icon/notes.png" alt="" />
+          <ion-label>About App</ion-label>
+        </ion-item>
 
+        <ion-item ion-item>
+          <img src="../assets/icon/envelope.png" alt="" />
+          <ion-label>contact us</ion-label>
+        </ion-item>
 
-      <ion-item class="active" ion-item >
-        <img src="assets/icon/rating.png" alt="">
-        <ion-label>Rate us</ion-label>
-      </ion-item>
+        <ion-item ion-item>
+          <img src="../assets/icon/mechanical-gears-.png" alt="" />
+          <ion-label>setting</ion-label>
+        </ion-item>
 
-      <ion-item  ion-item>
-        <img src="assets/icon/security.png" alt="">
-        <ion-label>privacy & policy</ion-label>
-      </ion-item>
-
-
-
-
-      <ion-item ion-item >
-        <img src="assets/icon/contact.png" alt="" >
-        <ion-label>contact us</ion-label>
-      </ion-item>
-
-    </ion-list>
-
+        <ion-item ion-item>
+          <img src="../assets/icon/share.png" alt="" />
+          <ion-label>Share App</ion-label>
+        </ion-item>
+      </ion-list>
     </ion-content>
   </ion-menu>
 
-
-
-
-
-    <ion-router-outlet id="menu-content"></ion-router-outlet>
-  </ion-app>
+  <ion-router-outlet id="menu-content"></ion-router-outlet>
+</ion-app>
