--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,7 +51,7 @@
 
   .active {
       border-left: 5px solid;
-      color: #628ccf;
+      color: #F707E1;
       padding-left: 15px;
 
       ion-icon {
