--- a/src/app/pages/editor/editor.page.scss
+++ b/src/app/pages/editor/editor.page.scss
@@ -1,10 +1,13 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
 .container
 {
   display: flex;
   flex-direction: column;
   justify-content:  space-around;
   height: 100%;
+
+
+
 }
 .container>div
 {
@@ -49,5 +52,6 @@ margin: 0px 10px;
 .control
 {
   text-align: center;
+
 }
 
