--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,15 +3,18 @@
   <ion-title>Shayari</ion-title>
   <ion-icon (click)="edit()" class="ion-padding" slot="end" size="large" name="create-outline">
   </ion-icon>
-  <ion-icon (click)="edit() " class="ion-padding" slot="end" size="large" name="heart-outline">
+
+
+
+  <ion-icon (click)="permission()" class="ion-padding" slot="end" size="large" name="heart-outline">
   </ion-icon>
+
 </ion-toolbar>
 <ion-toolbar>
-  <ion-searchbar (ionChange)="searchcard($event)"   showCancelButton="focus" debounce="500" placeholder="search Shayari"  animated ></ion-searchbar>
+  <ion-searchbar class="searchbar" (ionChange)="searchcard($event)"   showCancelButton="focus" debounce="500" placeholder="search Shayari"  animated ></ion-searchbar>
 
 </ion-toolbar>
 <ion-content>
-
 
   <ion-row>
     <ion-col size="6" *ngFor="let item of displayData index as i" >
