--- a/src/app/pages/editor/editor.page.html
+++ b/src/app/pages/editor/editor.page.html
@@ -71,7 +71,7 @@
                 <img src="../../../assets/icon/n.png" alt="">
                Text Style
               </ion-col>
-              <ion-col (click)="Save()">
+              <ion-col (click)="saves()">
                 <img src="../../../assets/icon/direct-download.png" alt="">
                Save
               </ion-col>
