--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -28,7 +28,7 @@
         <ng-lottie [options]="lottieConfig"  width="80px"
         height="80px"       ></ng-lottie>
         <ion-card-content>
-        {{item }}{{i}}
+        {{item }}
         </ion-card-content>
       </ion-card>
     </ion-col>
@@ -39,7 +39,7 @@
     loadingSpinner="none"
     >
       <div class="lottie">
-        <ng-lottie [options]="lottieConfigloder"  width="80px"
+        <ng-lottie [options]="lottieConfigloader"  width="80px"
         height="80px" ></ng-lottie>
       </div>
 
