--- a/src/app/pages/download/download.page.scss
+++ b/src/app/pages/download/download.page.scss
@@ -1,46 +1,30 @@
-.images {
-  column-count: 2;
-  .image {
-    display: inline-block;
-    padding: 5px;
-  }
-}
-
-.media-selector {
-  --size:30px;
-  padding: 3px;
-
-}
 
 
+.con
+{
 
-.tool {
-  position: fixed;
-  bottom: 10px;
- z-index: 44;
- width: 95%;
- background-color:#25D366;
-}
+ margin: 5px;
+ height: 200px;
+ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.16);
 
-.container {
-  border-radius: 15px;
-  box-shadow: 2px 7px 14px 1px rgba(0,0,0,0.8);
-  margin: 0 10px;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content:space-around;
-  align-items: center;
-  align-content: center;
-  font-size: 5px;
+img
+{
+  height: 100%;
+  width: 100%;
+  object-fit:cover;
+object-position: center;
+
 
 }
-.item {
-  flex: 0 0 auto;
-  margin: 10px;
-  text-align: center;
+
 
 }
-ion-icon {
-  font-size:20px;
-}
+
+
+
+
+
+
+
+
+
