--- a/src/app/pages/favroite/favroite.page.html
+++ b/src/app/pages/favroite/favroite.page.html
@@ -9,19 +9,22 @@
 </ion-header>
 <ion-content>
 
-  <ion-card *ngFor="let item of displayData index as i " mode="ios">
-    <ion-card-content>
-      <div class="edit">
-        <div (click)="edit(item)">edit</div>
-      </div>
+
+  <div class="container" *ngFor="let item of displayData index as i ">
+
+    <div #box class="contentitem" >
       {{item}}
-    </ion-card-content>
+    </div>
+
+
+
+
     <div class="bottom">
-      <div class="bottom1">
+      <div (click)="paginationService.copy(item)"  class="bottom1">
         <ion-icon name="copy-outline" size="large"></ion-icon>
       </div>
 
-      <div class="bottom1">
+      <div (click)="saves(i)" class="bottom1">
         <ion-icon name="arrow-down-circle" size="large"></ion-icon>
       </div>
 
@@ -36,8 +39,21 @@
       <div class="bottom1">
         <ion-icon name="logo-whatsapp" size="large"></ion-icon>
       </div>
+      <div  (click)="paginationService.edit(item)" class="bottom1">
+        <ion-icon name="create-outline" size="large"></ion-icon>
+      </div>
     </div>
-  </ion-card>
+
+  </div>
+
+
+
+
+
+
+
+
+
 
   <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
     <ion-infinite-scroll-content
