--- a/src/app/pages/favroite/favroite.page.scss
+++ b/src/app/pages/favroite/favroite.page.scss
@@ -16,36 +16,46 @@
   justify-content: center;
 }
 
-ion-card
-{
-  margin-bottom: 0%;
 
+
+.container
+{
+
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.16);
+  margin: 10px;
+  border-radius: 10px;
+
+}
+
+
+.contentitem
+{
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px;
   text-align: center;
 
 }
 
-ion-card-content
-{
- // background-image: linear-gradient( 135deg, #FFF720 10%, #3CD500 100%);
-  font-size:20px;
-  padding: 40px;
 
-  background-image: url('../../../assets/images/love.png');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
 
-}
+
 
 .edit
 {
-  position: absolute;
+  position: relative;
   top: 0px;
   left: 0px;
   padding: 5px;
   border: 1px solid black;
   border-radius: 50%;
  margin: 5px 0px;
- text-transform: capitalize;
+
 }
+
 
