--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -16,23 +16,26 @@
   justify-content: center;
 }
 
-ion-card
+.container
 {
-  margin-bottom: 0%;
 
-  text-align: center;
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.16);
+  margin: 10px;
+  border-radius: 10px;
 
 }
 
-ion-card-content
+
+.contentitem
 {
-  min-height: 250px;
-  font-size:20px;
-  padding: 40px;
-  //background-image: url('../../../assets/images/love.png');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px;
+  text-align: center;
 
 }
 
@@ -45,6 +48,5 @@ ion-card-content
   border: 1px solid black;
   border-radius: 50%;
  margin: 5px 0px;
- text-transform: capitalize;
-}
 
+}
