--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,10 @@
   font-family: 'Noto Sans', sans-serif;
 }
 
+.my-custom-class{
+  --background:#000000;
+  --color:#fff;
+  --box-shadow:10px 10px 5px 0px rgba(0,0,0,0.16);
+  --max-width:100px;
+  text-align: center;
+}
