--- a/src/app/pages/content/content.page.html
+++ b/src/app/pages/content/content.page.html
@@ -15,14 +15,13 @@
 
   <ion-card   *ngFor="let item of paginationService.item2 index as i " >
 
-    <ion-card-content (tap)="changeBackground($event,i)">
 
 
-      <div #box  class="contentitem" >
+
+      <div #box  [ngStyle]="{'background-image': setColor(i)}" class="contentitem" >
         {{item}}
       </div>
 
-    </ion-card-content>
     <div class="bottom"  >
 
       <div class="bottom1"   (click)="copy(item)"            >
@@ -40,11 +39,9 @@
       <ion-icon name="share-social" size="large"></ion-icon>
       </div>
 
-      <div class="bottom1" (click)="favroite(i)">
-      <ion-icon name="heart" size="large" ></ion-icon>
-      </div>
 
-      <div class="bottom1" (click)="whatsAppSharecard(i)">
+
+      <div class="bottom1" (click)="whatsAppcommonshare(i)">
       <ion-icon name="logo-whatsapp" size="large"></ion-icon>
       </div>
       <div  (click)="paginationService.edit(item)" class="bottom1">
@@ -60,10 +57,10 @@
 
   <div *ngIf="paginationService.loading"     >
 
-    <div *ngFor="let item of [].constructor(3)" >
+    <div *ngFor="let item of [].constructor(3) index as i" >
 
 
-    <ion-card   mode="ios">
+    <ion-card    [ngStyle]="{'background-image': setColor(i)}"  mode="ios">
 
 
       <ion-card-content>
@@ -90,9 +87,12 @@
 
   <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
     <ion-infinite-scroll-content
-      loadingSpinner="bubbles"
-      loadingText="Loading more data...">
+      loadingSpinner="none">
     </ion-infinite-scroll-content>
+    <div class="lottie">
+      <ng-lottie [options]="lottieConfigloader"  width="80px"
+      height="80px" ></ng-lottie>
+    </div>
   </ion-infinite-scroll>
 
 </ion-content>
