--- a/src/app/pages/favroite/favroite.page.scss
+++ b/src/app/pages/favroite/favroite.page.scss
@@ -18,44 +18,23 @@
 
 
 
-.container
-{
-
-  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.16);
-  margin: 10px;
+ion-card {
   border-radius: 10px;
-
-}
-
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.16);
+ }
 
 .contentitem
 {
-
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 200px;
+  min-height: 300px;
   text-align: center;
+  font-size: 20px;
 
 }
 
 
 
-
-
-.edit
-{
-  position: relative;
-  top: 0px;
-  left: 0px;
-  padding: 5px;
-  border: 1px solid black;
-  border-radius: 50%;
- margin: 5px 0px;
-
-}
 
 
